Fix firebase config and some spacing issues

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -60,6 +60,7 @@
 .regulations-center {
   margin-right: auto;
   margin-left: auto;
+  width: 70vw;
 }
 
 .fa-gift, .fa-clipboard-list, .fa-money-bill-alt, .fa-users {
